objects/FSLABB_JobClosure__e.object
<CustomObject>
    <description>FSL US2882 Closure of Work Order to be propagated to SAP ERP and ServIS.</description>
    <fields>
        <fullName>FSLABB_RecordEntity__c</fullName>
        <description>FSL US3169 The SAP system this record is related to.</description>
        <label>Record Entity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSLABB_RecordId__c</fullName>
        <description>The Id of the record that triggered the update.</description>
        <label>Record Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSLABB_SAPId__c</fullName>
        <description>SAP Id of the Operation to complete.</description>
        <label>SAP Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSLABB_SAPSystem__c</fullName>
        <description>SAP system the record is related to.</description>
        <label>SAP System</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSLABB_SystemGARId__c</fullName>
        <description>GAR Id of the ServIS system.</description>
        <label>GAR Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSLABB_UserFederationId__c</fullName>
        <description>Federation Id of the user triggering the completion.</description>
        <label>ABB Federation Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>FSL Job Closure</label>
    <pluralLabel>FSL Job Closures</pluralLabel>
</CustomObject>